--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "4.5.2"
   },
   "dependencies": {
-    "es6-promise": "4.1.0"
+    "es6-promise": "4.1.0",
+    "jsstring": "^0.1.0"
   },
   "repository": {
     "type": "git",
