--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "author": "jasmith79@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-plugin-transform-es2015-modules-umd": "6.24.1",
-    "babel-preset-env": "1.4.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "express": "^4.16.2",
-    "node-sass": "4.5.2"
+    "webpack": "^3.10.0"
   },
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^1.0.22",
+    "es6-collections": "^0.5.6",
     "es6-promise": "4.1.0",
     "extracttype": "^1.0.1",
+    "formdata-polyfill": "^3.0.9",
     "jsstring": "^0.2.0",
     "mixwith": "^0.1.1"
   },
