--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-minify": "^0.2.0",
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^1.0.22",
-    "es6-collections": "^0.5.6",
+    "babel-polyfill": "^6.26.0",
     "es6-promise": "4.1.0",
     "extracttype": "^1.0.1",
     "formdata-polyfill": "^3.0.9",
