Moved automated tests to Jasmine

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-minify": "^0.2.0",
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.2",
+    "jasmine": "^2.9.0",
     "webpack": "^3.10.0"
   },
   "dependencies": {
