--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.2",
     "jasmine": "^2.9.0",
+    "multer": "^1.3.0",
     "webpack": "^3.10.0"
   },
   "dependencies": {
