--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-components-lite",
-  "version": "2.0.6",
+  "version": "2.0.777777777",
   "description": "A very lightweight set of UI components.",
   "main": "index.js",
   "scripts": {
